benchmarks/fixtures/compile-failure/greeting.mjs
export function greeting(name) {
  return `Hello, ${name}!`;
}

export const defaultGreeting = greeting("world";
